--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 body {
-  background-image: url('http://www.vanessametonini.com.br/imersaocss/a1/img/fundo.jpg');
+  background-image: url('url('../img/Cartaz.jpg')');
   background-size: auto 100vh; 
   font-family: Arial;
   height: 100vh;
